# Noise_supression

./: .gitignore  CMakeLists.txt  README.md  RoadMap.md
AudioRecorder/: AudioRecorder.cpp  AudioRecorder.hpp  CMakeLists.txt  NoiseSuppressor.cpp  NoiseSuppressor.hpp  RecordData.hpp
SavingWorkers/: CMakeLists.txt  ISavingWorker.cpp  ISavingWorker.hpp  WavWorker.cpp  WavWorker.hpp
src/: main.cpp
src/AudioRecorder/: AudioRecorder.cpp  AudioRecorder.hpp  CMakeLists.txt  NoiseSuppressor.cpp  NoiseSuppressor.hpp  RecordData.hpp
src/SavingWorkers/: CMakeLists.txt  ISavingWorker.cpp  ISavingWorker.hpp  WavWorker.cpp  WavWorker.hpp
